# wiresharkffi

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: api.md  internals.md  recipes.md
src/wiresharkffi/: __init__.py  _constants.py  _fields.py  _guard.py  _prefs.py  _reader.py  _version.py  _ws_build.py  _ws_impl.c
tests/: conftest.py  test_fields.py  test_guard.py  test_reader.py
tests/data/: test.pcapng.lz4  test3.pcap
